--- a/MyApplicationSienke/app/src/main/res/values/colors.xml
+++ b/MyApplicationSienke/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="theme_colors">#4EA0DC</color>
+    <color name="theme_colors">#2ac2fa</color>
     <color name="green">#16A05D</color>
     <color name="red">#FF0000</color>
     <color name="blue">#107BB7</color>
