--- a/MyApplicationSienke/app/src/main/res/drawable/select_icon_2.xml
+++ b/MyApplicationSienke/app/src/main/res/drawable/select_icon_2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:drawable="@mipmap/scan_coinx" android:state_checked="true" />
-    <item android:drawable="@mipmap/tabbar_btn_barcodex" android:state_checked="false"/>
+    <item android:drawable="@mipmap/meter_code_icon_true" android:state_checked="true" />
+    <item android:drawable="@mipmap/meter_code_icon_false" android:state_checked="false"/>
 
 </selector>
