--- a/MyApplicationSienke/app/src/main/res/layout/activity_meter_user_listview.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_meter_user_listview.xml
@@ -43,6 +43,8 @@
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:overScrollFooter="@android:color/transparent"
+            android:overScrollHeader="@android:color/transparent"
             android:divider="@color/white_transparent"
             android:dividerHeight="8dp"
             android:listSelector="#00000000"
@@ -51,7 +53,24 @@
             android:paddingTop="5dp"
             android:scrollbarSize="2dp"
             android:scrollbarStyle="insideInset"
-            android:scrollbarThumbVertical="@color/text_blue"/>
+            android:scrollbarThumbVertical="@color/text_blue"
+            android:visibility="gone"/>
+
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                android:scrollbars="vertical"
+                android:scrollbarSize="2dp"
+                android:scrollbarStyle="insideInset"
+                android:scrollbarThumbVertical="@color/text_blue"
+                android:background="#fff"/>
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
         <TextView
             android:id="@+id/no_data"
