--- a/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_linearlayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:id="@+id/root_linearlayout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+    android:background="@android:color/white">
 
     <RelativeLayout
         android:id="@+id/root_relative"
@@ -14,9 +15,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
-            android:text="☛ 智慧平台"
+            android:layout_centerInParent="true"
+            android:text="Thinkersoft"
             android:textColor="@android:color/white"
             android:textSize="22sp" />
 
@@ -41,13 +41,14 @@
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="15dp"
+        android:layout_height="wrap_content"
         android:numColumns="3"
-        android:verticalSpacing="20dp"
-        android:listSelector="#00000000"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
         android:background="@android:color/white"
+        android:listSelector="#00000000"
         android:scrollbarThumbVertical="@color/text_blue"
         android:scrollbarStyle="insideInset"
         android:scrollbarSize="2dp"/>
+
 </LinearLayout>
