--- a/MyApplicationSienke/app/src/main/res/layout/activity_scan_code.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_scan_code.xml
@@ -2,21 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@android:color/white">
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:gravity="center"
+              android:background="@android:color/white">
 
-    <Button
-        android:id="@+id/scanBtn"
+    <android.support.v7.widget.CardView
+        android:id="@+id/book_cardview"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:background="@drawable/user_detail_save_btn_selector"
-        android:text="扫一扫"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        app:contentPadding="8dp"
+        tools:targetApi="lollipop">
 
+        <TextView
+            android:id="@+id/scan_code"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="扫一扫"
+            android:gravity="center"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:textColor="@color/theme_colors"
+            android:textSize="18sp" />
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:id="@+id/resultTv"
