--- a/MyApplicationSienke/app/src/main/res/layout/activity_listview_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_listview_info.xml
@@ -177,9 +177,31 @@
                     android:textColor="@color/text_black" />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:background="@color/text_font_color_white"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:drawableLeft="@mipmap/zp"
+                    android:drawablePadding="15dp"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="照    片"
+                    android:textSize="16sp" />
 
+                <ImageView
+                    android:id="@+id/photo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="8dp"/>
 
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
