--- a/MyApplicationSienke/app/src/main/res/layout/activity_work_report.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_work_report.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/gray_thin"
     android:orientation="vertical"
-    android:id="@+id/rootLinearlayout">
+    android:id="@+id/root_linearlayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
